--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--Thanks for visiting my code-->
 <!--Created By : Harsh Thakur-->
-<!--If you enjoy playing this game, don't forget to appreciate-->
+<!--If you enjoy playing this website, don't forget to appreciate-->
 <!--If you have any idea or feedback, please comment...-->
 
 <!DOCTYPE html>
